--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,14 +4,79 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  
+    
   <servlet>
   	<servlet-name>Login</servlet-name>
   	<display-name>Login</display-name>
   	<description></description>
   	<servlet-class>com.club.servlet.Login</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>Admin</servlet-name>
+  	<display-name>Admin</display-name>
+  	<description></description>
+  	<servlet-class>com.club.servlet.Admin</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>AdminImp</servlet-name>
+  	<display-name>AdminImp</display-name>
+  	<description></description>
+  	<servlet-class>com.club.servlet.AdminImp</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>AdminStudentUpdate</servlet-name>
+  	<display-name>AdminStudentUpdate</display-name>
+  	<description></description>
+  	<servlet-class>com.club.servlet.AdminStudentUpdate</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>List</servlet-name>
+  	<display-name>List</display-name>
+  	<description></description>
+  	<servlet-class>com.club.servlet.List</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>Demo</servlet-name>
+  	<display-name>Demo</display-name>
+  	<description></description>
+  	<servlet-class>com.club.servlet.Demo</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>AdminJump</servlet-name>
+  	<display-name>AdminJump</display-name>
+  	<description></description>
+  	<servlet-class>com.club.servlet.AdminJump</servlet-class>
+  </servlet>
+  
   <servlet-mapping>
   	<servlet-name>Login</servlet-name>
   	<url-pattern>/Login</url-pattern>
   </servlet-mapping>
+  
+  <servlet-mapping>
+  	<servlet-name>Admin</servlet-name>
+  	<url-pattern>/Admin</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>AdminImp</servlet-name>
+  	<url-pattern>/AdminImp</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>AdminStudentUpdate</servlet-name>
+  	<url-pattern>/AdminStudentUpdate</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>List</servlet-name>
+  	<url-pattern>/List</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>Demo</servlet-name>
+  	<url-pattern>/Demo</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>AdminJump</servlet-name>
+  	<url-pattern>/AdminJump</url-pattern>
+  </servlet-mapping>
 </web-app>
+
